--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,71 @@
+/* common */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
 .hidden {
   display: none;
+}
+
+img {
+  position: relative;
+  width: 100%;
+  height: 1300px;
+}
+
+main {
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+  color: #fff;
+}
+
+.center {
+  width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+/* clock */
+#clock {
+  font-size: 100px;
+  margin-top: 350px;
+}
+
+/* login */
+.login-form {
+  /* background-color: yellow; */
+}
+
+.login-form input:first-child {
+  display: inline-block;
+  vertical-align: middle;
+  width: 350px;
+  height: 40px;
+  font-size: 35px;
+}
+
+.login-form input:last-child {
+  display: inline-block;
+  vertical-align: middle;
+  width: 80px;
+  height: 40px;
+  font-size: 15px;
+}
+
+/* todo */
+#todo-form {
+  background-color: yellow;
+}
+
+#todo-form input {
+  width: 300px;
+  height: 40px;
+  font-size: 18px;
 }
