--- a/css/style.css
+++ b/css/style.css
@@ -59,13 +59,43 @@ main {
   font-size: 15px;
 }
 
+#greeting {
+  margin: 30px 0 30px 0;
+}
+
 /* todo */
 #todo-form {
-  background-color: yellow;
+  /* background-color: yellow; */
 }
 
 #todo-form input {
-  width: 300px;
+  width: 400px;
   height: 40px;
   font-size: 18px;
+  background-color: transparent;
+  border: 0;
+  border-bottom: 3px solid #000;
+  text-align: center;
+}
+
+#todo-list {
+  margin: 25px 0 25px 0;
+}
+
+#todo-list li {
+  margin: 10px 0 10px;
+}
+
+#todo-list li button {
+  background-color: transparent;
+  border: 0;
+  height: 15px;
+  width: 15px;
+  margin-left: 10px;
+  color: red;
+  cursor: pointer;
+}
+
+/* quote */
+#quote {
 }
